--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -37,19 +37,19 @@ steps:
       # TODO: Add all milestone long simulation runs
 
       - label: ":computer: barocliniw wave (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --moist equil --microphy 0M --dt 200secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --moist equil --microphy 0M --dt 450secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_bw_rhoe_equil/*"
         agents:
           slurm_cpus_per_task: 8
       
       - label: ":computer: barocliniw wave (ρe_tot) equilmoist ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --dt 200secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil_ars343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --dt 450secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil_ars343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_bw_rhoe_equil_ars343/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dt 500secs --t_end 1200days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe/*"
         agents:
           slurm_cpus_per_task: 8
@@ -61,7 +61,7 @@ steps:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 250secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 450secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equil/*"
         agents:
           slurm_cpus_per_task: 8
@@ -73,7 +73,7 @@ steps:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov Float64"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 250secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo_ft64 --dt_save_to_sol 1days --dt_save_to_disk 10days --FLOAT_TYPE Float64"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo_ft64 --dt_save_to_sol 1days --dt_save_to_disk 10days --FLOAT_TYPE Float64"
         artifact_paths: "longrun_hs_rhoe_equil_mo_ft64/*"
         agents:
           slurm_cpus_per_task: 8
@@ -85,7 +85,7 @@ steps:
           slurm_cpus_per_task: 8
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist gray radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad gray --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad gray --microphy 0M --dt 450secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_aquaplanet_rhoe_equil_gray/*"
         agents:
           slurm_cpus_per_task: 8
@@ -148,7 +148,7 @@ steps:
     steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 250secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo --dt_save_to_sol 1days --dt_save_to_disk 10days"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo --dt_save_to_sol 1days --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equil_mo/*"
         agents:
           slurm_cpus_per_task: 8
@@ -170,7 +170,7 @@ steps:
     steps:
     
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 200secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
         artifact_paths: "longrun_bw_rhoe_equil_highres/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
@@ -178,7 +178,7 @@ steps:
           slurm_ntasks: 64
 
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution zalesak ars343"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_zalesak_ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_zalesak_ars343"
         artifact_paths: "longrun_bw_rhoe_equil_highres_zalesak_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
@@ -186,7 +186,7 @@ steps:
           slurm_ntasks: 128
 
       - label: ":computer: held suarez (ρe_tot) high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --dt 200secs --t_end 600days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 200secs --t_end 600days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres"
         artifact_paths: "longrun_hs_rhoe_highres/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
@@ -194,7 +194,7 @@ steps:
           slurm_ntasks: 128
 
       - label: ":computer: held suarez (ρe_tot) high resolution ARS343"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --ode_algo ARS343 --dt 200secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres_ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --ode_algo ARS343 --dt 200secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres_ars343"
         artifact_paths: "longrun_hs_rhoe_highres_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
@@ -202,7 +202,7 @@ steps:
           slurm_ntasks: 128
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --dt 50secs --t_end 150days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
         artifact_paths: "longrun_hs_rhoe_equil_highres/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
@@ -210,7 +210,7 @@ steps:
           slurm_ntasks: 128
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution zalesak ars343"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 12 --kappa_4 7e15 --dt 50secs --t_end 150days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_zalesak_ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 150days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_zalesak_ars343"
         artifact_paths: "longrun_hs_rhoe_equil_highres_zalesak_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
