--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -30,152 +30,31 @@ steps:
 
   - wait
 
-  - group: "Core Long runs (central difference)"
-
-    steps:
-
-      # TODO: Add all milestone long simulation runs
-
-      - label: ":computer: barocliniw wave (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --moist equil --microphy 0M --dt 450secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_bw_rhoe_equil/*"
-        agents:
-          slurm_cpus_per_task: 8
-      
-      - label: ":computer: barocliniw wave (ρe_tot) equilmoist ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --dt 450secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil_ars343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_bw_rhoe_equil_ars343/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dt 500secs --t_end 1200days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --fps 30 --job_id longrun_hs_rhoe_ars343 --ode_algo ARS343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_ars343/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 450secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 250secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil_ars343 --ode_algo ARS343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil_ars343/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov Float64"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo_ft64 --dt_save_to_sol 1days --dt_save_to_disk 10days --FLOAT_TYPE Float64"
-        artifact_paths: "longrun_hs_rhoe_equil_mo_ft64/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky radiation monin_obukhov Float64"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme monin_obukhov --moist equil --rad clearsky --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_clearsky_mo_ft64 --dt_save_to_sol 1days --dt_save_to_disk 10days --FLOAT_TYPE Float64"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky_mo_ft64/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist gray radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad gray --microphy 0M --dt 450secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_gray/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad clearsky --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_clearsky --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_allsky --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_allsky/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_int)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoeint/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-  - group: "Core Long runs (FCT Zalesak on tracer)"
-
-    steps:
-      
-      # TODO: add it back after topography fix
-      #- label: ":computer: held suarez (ρe_tot) zalesak topography"
-      #  command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --tracer_upwinding zalesak --dt 300secs --t_end 1200days --fps 30 --job_id longrun_hs_rhoe_zalesak --dt_save_to_sol 1days --dt_save_to_disk 10days --topography DCMIP200"
-      #  artifact_paths: "longrun_hs_rhoe_zalesak/*"
-      #  agents:
-      #    slurm_cpus_per_task: 8
-
-      - label: ":computer: barocliniw wave (ρe_tot) equilmoist zalesak"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --tracer_upwinding zalesak --moist equil --microphy 0M --dt 200secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil_zaleska --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_bw_rhoe_equil_zalesak/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: barocliniw wave (ρe_tot) equilmoist zalesak ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --ode_algo ARS343 --tracer_upwinding zalesak --moist equil --microphy 0M --dt 200secs --t_end 100days --fps 30 --job_id longrun_bw_rhoe_equil_zaleska_ars343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_bw_rhoe_equil_zalesak_ars343/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist zalesak"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --tracer_upwinding zalesak --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil_zalesak --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil_zalesak/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist zalesak ars343"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --ode_algo ARS343 --tracer_upwinding zalesak --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil_zalesak_ars343 --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil_zalesak_ars343/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-  - group: "Experimental Long runs"
-
-    steps:
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_equil_mo --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil_mo/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) hightop"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 25 --dt 300secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_hightop/*"
-        agents:
-          slurm_cpus_per_task: 8
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist hightop sponge"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_max 45e3 --z_elem 25 --rayleigh_sponge true --zd_rayleigh 30e3 --alpha_rayleigh_uh 0 --dt 200secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil_hightop_sponge --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_equil_hightop_sponge/*"
-        agents:
-          slurm_cpus_per_task: 8
-
   - group: "Targeted resolution AMIP long runs"
 
     steps:
     
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 200secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
         artifact_paths: "longrun_bw_rhoe_equil_highres/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
         agents:
-          slurm_ntasks: 64
+          slurm_ntasks: 128
+      
+      - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_ars343"
+        artifact_paths: "longrun_bw_rhoe_equil_highres_ars343/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
+      
+      - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution third ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --tracer_upwinding third_order --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_zalesak_third_ars343"
+        artifact_paths: "longrun_bw_rhoe_equil_highres_third_ars343/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
 
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution zalesak ars343"
         command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_zalesak_ars343"
@@ -185,43 +64,34 @@ steps:
         agents:
           slurm_ntasks: 128
 
-      - label: ":computer: held suarez (ρe_tot) high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 200secs --t_end 600days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres"
-        artifact_paths: "longrun_hs_rhoe_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 128
-
-      - label: ":computer: held suarez (ρe_tot) high resolution ARS343"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --ode_algo ARS343 --dt 200secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres_ars343"
-        artifact_paths: "longrun_hs_rhoe_highres_ars343/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 128
-
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
         artifact_paths: "longrun_hs_rhoe_equil_highres/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
+      
+      - label: ":computer: held suarez (ρe_tot) equilmoist high resolution ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_ars343"
+        artifact_paths: "longrun_hs_rhoe_equil_highres_ars343/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
+      
+      - label: ":computer: held suarez (ρe_tot) equilmoist high resolution third ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding third_order --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_third_ars343"
+        artifact_paths: "longrun_hs_rhoe_equil_highres_third_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
         agents:
           slurm_ntasks: 128
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution zalesak ars343"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 150days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_zalesak_ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_zalesak_ars343"
         artifact_paths: "longrun_hs_rhoe_equil_highres_zalesak_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
         agents:
           slurm_ntasks: 128
-
-  - group: "TurbulenceConvection"
-    steps:
-
-      - label: ":balloon: Compressible single column EDMF TRMM_LBA"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case TRMM_LBA --dt_save_to_sol 5mins --z_elem 90 --z_stretch false --z_max 17000 --rayleigh_sponge true --zd_rayleigh 15000 --job_id longrun_compressible_edmf_trmm --dt 0.1secs --t_end 6hours"
-        artifact_paths: "longrun_compressible_edmf_trmm/*"
-        agents:
-          slurm_mem: 20GB
