--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -42,19 +42,21 @@ steps:
         agents:
           slurm_ntasks: 128
 
-      - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
-        artifact_paths: "longrun_bw_rhoe_equil_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 128
+      # - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
+      #   command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
+      #   artifact_paths: "longrun_bw_rhoe_equil_highres/*"
+      #   env:
+      #     CLIMACORE_DISTRIBUTED: "MPI"
+      #   agents:
+      #     slurm_ntasks: 128
       
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution third"
         command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --tracer_upwinding third_order --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_third_ars343"
         artifact_paths: "longrun_bw_rhoe_equil_highres_third/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
       
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution ars343"
         command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 2e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_ars343"
@@ -69,6 +71,8 @@ steps:
         artifact_paths: "longrun_bw_rhoe_equil_highres_third_ars343/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
 
       # - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution zalesak ars343"
       #   command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --moist equil --microphy 0M --tracer_upwinding zalesak --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres_zalesak_ars343"
@@ -86,13 +90,13 @@ steps:
       #   agents:
       #     slurm_ntasks: 128
       
-      # - label: ":computer: held suarez (ρe_tot) equilmoist high resolution ars343"
-      #   command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_ars343"
-      #   artifact_paths: "longrun_hs_rhoe_equil_highres_ars343/*"
-      #   env:
-      #     CLIMACORE_DISTRIBUTED: "MPI"
-      #   agents:
-      #     slurm_ntasks: 128
+      - label: ":computer: held suarez (ρe_tot) equilmoist high resolution ars343"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_ars343"
+        artifact_paths: "longrun_hs_rhoe_equil_highres_ars343/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 128
       
       # - label: ":computer: held suarez (ρe_tot) equilmoist high resolution third ars343"
       #   command: "mpiexec julia --project=examples examples/hybrid/driver.jl --ode_algo ARS343 --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --tracer_upwinding third_order --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 50secs --t_end 200days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_third_ars343"
