--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -196,6 +196,8 @@ steps:
       - label: ":computer: held suarez (ρe_tot) equilmoist FCT Zalesak on moisture"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --microphy 0M --tracer_upwinding zalesak --kappa_4 4e17 --job_id sphere_held_suarez_rhoe_equilmoist_zalesak --dt 200secs --t_end 3days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_zalesak/*"
+        agents:
+          slurm_mem: 20GB
 
   - group: "Configs"
     steps:
