--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -369,7 +369,7 @@ steps:
         agents:
           slurm_mem: 20GB
 
-      - label: ":rocket: flame graph: threadedd perf target (ρe_tot)"
+      - label: ":rocket: flame graph: threaded perf target (ρe_tot)"
         command: "julia --threads 8 --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_rhoe_threaded --enable_threading true"
         artifact_paths: "flame_perf_target_rhoe_threaded/*"
         agents:
@@ -392,8 +392,10 @@ steps:
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
 
-      - label: ":mag: Allocations: baroclinic wave (ρe_tot)"
+      - label: ":mag: Allocations: perf target"
         command: "julia --color=yes --project=perf perf/allocs.jl"
+        agents:
+          slurm_mem: 20GB
 
   - wait: ~
     continue_on_failure: true
