CompatHelper: add new compat entry for RRTMGP at version 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,6 +50,7 @@ JLD2 = "0.4"
 LambertW = "0.4"
 OperatorFlux = "0.1"
 OrdinaryDiffEq = "5.64.0"
+RRTMGP = "0.6"
 StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
